--- a/src/pages/moviesBySearch.css
+++ b/src/pages/moviesBySearch.css
@@ -4,13 +4,14 @@
   box-shadow: 0px 0px 13px -2px rgba(0,0,0,0.75);
 }
 
-.collapse ul {
+.collapse, .collapsing ul {
   margin-top: 8px;
 }
 
 .breadcrumb {
   margin: 0 !important;
-  font-size: calc(10px + 1vw);
+  font-size: calc(9.5px + 1vw);
+  margin-left: -7px !important;
 }
 
 @media screen and (min-width: 700px) {
